--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-datetime": "^3.2.0",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-ios-time-picker": "^0.2.2",
     "react-router-dom": "^6.11.1",
     "react-table": "^7.8.0",
