added 1 click functionality

--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@syncfusion/ej2-react-calendars": "^21.2.4",
     "axios": "^1.2.1",
     "install": "^0.13.0",
+    "ipify": "^6.0.0",
     "moment": "^2.29.4",
     "npm": "^9.6.6",
+    "os": "^0.1.2",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.11.0",
