--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "npm": "^9.6.6",
     "os": "^0.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.11.0",
     "react-datetime": "^3.2.0",
