--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"dependencies": {
+		"chart.js": "^4.3.2",
 		"dotenv": "^16.3.1",
-		"mysql2": "^3.5.2"
+		"mysql2": "^3.5.2",
+		"react-chartjs-2": "^5.2.0"
 	}
 }
