--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 		"chart.js": "^4.3.2",
 		"dotenv": "^16.3.1",
 		"mysql2": "^3.5.2",
-		"react-chartjs-2": "^5.2.0"
+		"react-chartjs-2": "^5.2.0",
+		"react-toastify": "^9.1.3",
+		"tailwindcss": "^3.3.3"
 	}
 }
