--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@syncfusion/ej2-react-calendars": "^21.2.4",
     "axios": "^1.2.1",
     "chart.js": "^4.3.0",
+    "font-awesome": "^4.7.0",
     "install": "^0.13.0",
     "ipify": "^6.0.0",
     "moment": "^2.29.4",
