--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"chart.js": "^4.3.2",
 		"dotenv": "^16.3.1",
+		"font-awesome": "^4.7.0",
 		"mysql2": "^3.5.2",
 		"react-chartjs-2": "^5.2.0",
 		"react-toastify": "^9.1.3",
