--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,12 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.3",
     "node-excel-export": "^1.4.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.33.0",
+    "xlsx": "^0.18.5"
   }
 }
