--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -22,6 +23,7 @@
     "node-excel-export": "^1.4.4",
     "nodemon": "^2.0.20",
     "sequelize": "^6.33.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   }
 }
