--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-ios-time-picker": "^0.2.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.11.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.2"
