--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"dotenv": "^16.3.1",
 		"font-awesome": "^4.7.0",
 		"mysql2": "^3.5.2",
+		"nodemon": "^3.0.2",
 		"react-chartjs-2": "^5.2.0",
 		"react-toastify": "^9.1.3",
 		"tailwindcss": "^3.3.3"
